log/build_2024-02-15_00-11-53/mypkg/stdout_stderr.log
running egg_info
writing ../../build/mypkg/mypkg.egg-info/PKG-INFO
writing dependency_links to ../../build/mypkg/mypkg.egg-info/dependency_links.txt
writing entry points to ../../build/mypkg/mypkg.egg-info/entry_points.txt
writing requirements to ../../build/mypkg/mypkg.egg-info/requires.txt
writing top-level names to ../../build/mypkg/mypkg.egg-info/top_level.txt
reading manifest file '../../build/mypkg/mypkg.egg-info/SOURCES.txt'
writing manifest file '../../build/mypkg/mypkg.egg-info/SOURCES.txt'
running build
running build_py
copying mypkg/receiver.py -> /home/yamashita/car_ws/build/mypkg/build/lib/mypkg
running install
running install_lib
copying /home/yamashita/car_ws/build/mypkg/build/lib/mypkg/receiver.py -> /home/yamashita/car_ws/install/mypkg/lib/python3.10/site-packages/mypkg
byte-compiling /home/yamashita/car_ws/install/mypkg/lib/python3.10/site-packages/mypkg/receiver.py to receiver.cpython-310.pyc
  File "/home/yamashita/car_ws/install/mypkg/lib/python3.10/site-packages/mypkg/receiver.py", line 5
    from std_msgs.msgimport String
                            ^^^^^^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/yamashita/car_ws/install/mypkg/lib/python3.10/site-packages/mypkg-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/mypkg/mypkg.egg-info to /home/yamashita/car_ws/install/mypkg/lib/python3.10/site-packages/mypkg-0.0.0-py3.10.egg-info
running install_scripts
Installing camera script to /home/yamashita/car_ws/install/mypkg/lib/mypkg
Installing serial script to /home/yamashita/car_ws/install/mypkg/lib/mypkg
writing list of installed files to '/home/yamashita/car_ws/build/mypkg/install.log'
